# taoist

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cnn/: CMakeLists.txt  aligned_mem_pool.cpp  aligned_mem_pool.h  dim.cpp  dim.h  mem.cpp  mem.h  random.cpp  random.h  tensor.cpp  tensor.h
doc/: note.md
eigen/.hg/: dirstate  undo.desc
eigen/.hg/cache/: branch2-served  hgtagsfnodes1  tags2-visible
eigen/.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo  undo.backup.fncache
eigen/.hg/store/data/: _c_make_lists.txt.i  ~2ehgignore.i
eigen/.hg/store/data/_eigen/: _core.i  _eigenvalues.i  _k_l_u_support.i  _pa_sti_x_support.i  _q_r.i  _sparse.i
eigen/.hg/store/data/bench/: _bench_timer.h.i
eigen/.hg/store/data/cmake/: _eigen_configure_testing.cmake.i  _eigen_testing.cmake.i  _find_eigen3.cmake.i  _find_k_l_u.cmake.i
eigen/.hg/store/data/doc/: _ascii_quick_reference.txt.i  _c_make_lists.txt.i  _preprocessor_directives.dox.i  _quick_reference.dox.i  _sparse_linear_systems.dox.i  _unaligned_array_assert.dox.i  _using_intel_m_k_l.dox.i  _using_n_v_c_c.dox.i
eigen/.hg/store/data/scripts/: buildtests.in.i  eigen__monitor__perf.sh.i
eigen/.hg/store/data/test/: _c_make_lists.txt.i  adjoint.cpp.i  basicstuff.cpp.i  bdcsvd.cpp.i  bicgstab.cpp.i  block.cpp.i  cholesky.cpp.i  conservative__resize.cpp.i  cuda__basic.cu.i  determinant.cpp.i  eigensolver__generalized__real.cpp.i  eigensolver__selfadjoint.cpp.i  (+25 more)
py/: README.md
scripts/: README.md
src/: cnn.cpp  cnn.h  cnn_edges.cpp  cnn_lines.cpp  cnn_lines.h
tests/: test_graph.cpp
(+162 files in other folders)
